# websocketz

./: Cargo.toml  README.md  cspell.json
.github/workflows/: autobahn.yml  build-and-test.yml  spellcheck.yml
autobahn/: autobahn-client.sh  autobahn-server.sh  expected-results.json  fuzzingclient.json  fuzzingserver.json
autobahn/config/: fuzzingclient.json  fuzzingserver.json
examples/: aplit.rs  autobahn-client.rs  autobahn-server.rs  client-callback.rs  echo-server.rs  server-callback.rs  simple.rs  split.rs
examples/esp32/: Cargo.toml
examples/esp32/.cargo/: config.toml
src/: close_code.rs  close_frame.rs  codec.rs  error.rs  examples.rs  fragments.rs  frame.rs  functions.rs  http.rs  lib.rs  macros.rs  mask.rs  message.rs  mock.rs  next.rs  on_message.rs  opcode.rs  options.rs  tests.rs  websocket.rs  websocket_core.rs  websockets.rs  websockets_core.rs
src/builder/: client.rs  mod.rs  server.rs
