[package]
name = "websocketz"
version = "0.0.0"
edition = "2024"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A zerocopy websockets implementation for no_std environments."
repository = "https://github.com/JadKHaddad/websocketz"
keywords = ["no_std", "embedded", "websockets", "zerocopy"]

[dependencies]
