[package]
name = "websocketz"
version = "0.0.0"
edition = "2024"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A zerocopy websockets implementation for no_std environments."
repository = "https://github.com/JadKHaddad/websocketz"
keywords = ["no_std", "embedded", "websockets", "zerocopy"]

[dependencies]
framez = { version = "0.2.0", default-features = false }
embedded-io-async = { version = "0.6.1", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
rand = { version = "0.9.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
httparse = { version = "1.10.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }

[dev-dependencies]
rand = { version = "0.9.1", features = ["std_rng"] }
embedded-io-adapters = { version = "0.6.1", default-features = false, features = [
    "tokio-1",
] }
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.31"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1.10.1"
hyper = "1.6.0"
futures = "0.3.31"
hyper-util = "0.1.14"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
framez = { version = "0.2.0", default-features = false, features = [
    "tracing",
    "char-fmt",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "autobahn-client"
path = "examples/autobahn-client.rs"
required-features = []
